sandbox/geos/fp_geos_c.h


typedef struct GEOSContextHandle_HS *GEOSContextHandle_t;
typedef void (*GEOSMessageHandler)(const char *fmt, ...);
typedef struct GEOSGeom_t GEOSGeometry;
typedef struct GEOSCoordSeq_t GEOSCoordSequence;
typedef void (GEOSInterruptCallback)(void);
typedef struct GEOSWKTWriter_t GEOSWKTWriter;
typedef struct GEOSWKBReader_t GEOSWKBReader;
typedef struct GEOSWKBWriter_t GEOSWKBWriter;
typedef struct GEOSGeoJSONReader_t GEOSGeoJSONReader;
typedef struct GEOSGeoJSONWriter_t GEOSGeoJSONWriter;
extern GEOSWKTWriter  *GEOSWKTWriter_create_r(
    GEOSContextHandle_t handle);
extern void  GEOSWKTWriter_destroy_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter* writer);
extern char  *GEOSWKTWriter_write_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter* writer,
    const GEOSGeometry* g);
extern void  GEOSWKTWriter_setTrim_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter *writer,
    char trim);
extern void  GEOSWKTWriter_setRoundingPrecision_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter *writer,
    int precision);
extern void  GEOSWKTWriter_setOutputDimension_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter *writer,
    int dim);
extern int   GEOSWKTWriter_getOutputDimension_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter *writer);
extern void  GEOSWKTWriter_setOld3D_r(
    GEOSContextHandle_t handle,
    GEOSWKTWriter *writer,
    int useOld3D);
extern GEOSWKBReader  *GEOSWKBReader_create_r(
    GEOSContextHandle_t handle);
extern void  GEOSWKBReader_destroy_r(
    GEOSContextHandle_t handle,
    GEOSWKBReader* reader);
extern void  GEOSWKBReader_setFixStructure_r(
    GEOSContextHandle_t handle,
    GEOSWKBReader *reader,
    char doFix);
extern GEOSGeometry  *GEOSWKBReader_read_r(
    GEOSContextHandle_t handle,
    GEOSWKBReader* reader,
    const unsigned char *wkb,
    size_t size);
extern GEOSGeometry  *GEOSWKBReader_readHEX_r(
    GEOSContextHandle_t handle,
    GEOSWKBReader* reader,
    const unsigned char *hex,
    size_t size);
extern GEOSWKBWriter  *GEOSWKBWriter_create_r(
    GEOSContextHandle_t handle);
extern void  GEOSWKBWriter_destroy_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer);
extern unsigned char  *GEOSWKBWriter_write_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer,
    const GEOSGeometry* g,
    size_t *size);
extern unsigned char  *GEOSWKBWriter_writeHEX_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer,
    const GEOSGeometry* g,
    size_t *size);
extern int  GEOSWKBWriter_getOutputDimension_r(
    GEOSContextHandle_t handle,
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setOutputDimension_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer, int newDimension);
extern int  GEOSWKBWriter_getByteOrder_r(
    GEOSContextHandle_t handle,
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setByteOrder_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer,
    int byteOrder);
extern int  GEOSWKBWriter_getFlavor_r(
    GEOSContextHandle_t handle,
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setFlavor_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer,
    int flavor);
extern char  GEOSWKBWriter_getIncludeSRID_r(
    GEOSContextHandle_t handle,
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setIncludeSRID_r(
    GEOSContextHandle_t handle,
    GEOSWKBWriter* writer, const char writeSRID);
extern GEOSGeoJSONReader  *GEOSGeoJSONReader_create_r(
    GEOSContextHandle_t handle);
extern void  GEOSGeoJSONReader_destroy_r(GEOSContextHandle_t handle,
    GEOSGeoJSONReader* reader);
extern GEOSGeometry  *GEOSGeoJSONReader_readGeometry_r(
    GEOSContextHandle_t handle,
    GEOSGeoJSONReader* reader,
    const char *geojson);
extern GEOSGeoJSONWriter  *GEOSGeoJSONWriter_create_r(
    GEOSContextHandle_t handle);
extern void  GEOSGeoJSONWriter_destroy_r(GEOSContextHandle_t handle,
    GEOSGeoJSONWriter* writer);
extern char  *GEOSGeoJSONWriter_writeGeometry_r(
    GEOSContextHandle_t handle,
    GEOSGeoJSONWriter* writer,
    const GEOSGeometry* g,
    int indent);
extern void  GEOSFree_r(
    GEOSContextHandle_t handle,
    void *buffer);
extern const char  *GEOSversion(void);
extern void  initGEOS(
    GEOSMessageHandler notice_function,
    GEOSMessageHandler error_function);
extern void  finishGEOS(void);
extern void  GEOSFree(void *buffer);
extern GEOSCoordSequence  *GEOSCoordSeq_create(unsigned int size, unsigned int dims);
extern GEOSCoordSequence  *GEOSCoordSeq_copyFromBuffer(const double* buf, unsigned int size, int hasZ, int hasM);
extern GEOSCoordSequence  *GEOSCoordSeq_copyFromArrays(const double* x, const double* y, const double* z, const double* m, unsigned int size);
extern int  GEOSCoordSeq_copyToBuffer(const GEOSCoordSequence* s, double* buf, int hasZ, int hasM);
extern int  GEOSCoordSeq_copyToArrays(const GEOSCoordSequence* s, double* x, double* y, double* z, double* m);
extern GEOSCoordSequence  *GEOSCoordSeq_clone(const GEOSCoordSequence* s);
extern void  GEOSCoordSeq_destroy(GEOSCoordSequence* s);
extern int  GEOSCoordSeq_setX(GEOSCoordSequence* s,
    unsigned int idx, double val);
extern int  GEOSCoordSeq_setY(GEOSCoordSequence* s,
    unsigned int idx, double val);
extern int  GEOSCoordSeq_setZ(GEOSCoordSequence* s,
    unsigned int idx, double val);
extern int  GEOSCoordSeq_setXY(GEOSCoordSequence* s,
    unsigned int idx, double x, double y);
extern int  GEOSCoordSeq_setXYZ(GEOSCoordSequence* s,
    unsigned int idx, double x, double y, double z);
extern int  GEOSCoordSeq_setOrdinate(GEOSCoordSequence* s,
    unsigned int idx, unsigned int dim, double val);
extern int  GEOSCoordSeq_getX(const GEOSCoordSequence* s,
    unsigned int idx, double *val);
extern int  GEOSCoordSeq_getY(const GEOSCoordSequence* s,
    unsigned int idx, double *val);
extern int  GEOSCoordSeq_getZ(const GEOSCoordSequence* s,
    unsigned int idx, double *val);
extern int  GEOSCoordSeq_getXY(const GEOSCoordSequence* s,
    unsigned int idx, double *x, double *y);
extern int  GEOSCoordSeq_getXYZ(const GEOSCoordSequence* s,
    unsigned int idx, double *x, double *y, double *z);
extern int  GEOSCoordSeq_getOrdinate(const GEOSCoordSequence* s,
    unsigned int idx, unsigned int dim, double *val);
extern int  GEOSCoordSeq_getSize(
    const GEOSCoordSequence* s,
    unsigned int *size);
extern int  GEOSCoordSeq_getDimensions(
    const GEOSCoordSequence* s,
    unsigned int *dims);
extern int  GEOSCoordSeq_isCCW(
    const GEOSCoordSequence* s,
    char* is_ccw);
extern GEOSGeometry  *GEOSGeom_createPoint(GEOSCoordSequence* s);
extern GEOSGeometry  *GEOSGeom_createPointFromXY(double x, double y);
extern GEOSGeometry  *GEOSGeom_createEmptyPoint(void);
extern GEOSGeometry  *GEOSGeom_createLinearRing(GEOSCoordSequence* s);
extern GEOSGeometry  *GEOSGeom_createLineString(GEOSCoordSequence* s);
extern GEOSGeometry  *GEOSGeom_createEmptyLineString(void);
extern GEOSGeometry  *GEOSGeom_createEmptyPolygon(void);
extern GEOSGeometry  *GEOSGeom_createPolygon(
    GEOSGeometry* shell,
    GEOSGeometry** holes,
    unsigned int nholes);
extern GEOSGeometry  *GEOSGeom_createCollection(
    int type,
    GEOSGeometry** geoms,
    unsigned int ngeoms);
extern GEOSGeometry  ** GEOSGeom_releaseCollection(
    GEOSGeometry * collection,
    unsigned int * ngeoms);
extern GEOSGeometry  *GEOSGeom_createEmptyCollection(int type);
extern GEOSGeometry  *GEOSGeom_createRectangle(
    double xmin, double ymin,
    double xmax, double ymax);
extern GEOSGeometry  *GEOSGeom_clone(const GEOSGeometry* g);
extern void  GEOSGeom_destroy(GEOSGeometry* g);
extern char  *GEOSGeomType(const GEOSGeometry* g);
extern int  GEOSGeomTypeId(const GEOSGeometry* g);
extern int  GEOSGetSRID(const GEOSGeometry* g);
extern void  *GEOSGeom_getUserData(const GEOSGeometry* g);
extern int  GEOSGetNumGeometries(const GEOSGeometry* g);
extern const GEOSGeometry  *GEOSGetGeometryN(
    const GEOSGeometry* g,
    int n);
extern double  GEOSGeom_getPrecision(const GEOSGeometry *g);
extern int  GEOSGetNumInteriorRings(const GEOSGeometry* g);
extern int  GEOSGeomGetNumPoints(const GEOSGeometry* g);
extern int  GEOSGeomGetX(const GEOSGeometry *g, double *x);
extern int  GEOSGeomGetY(const GEOSGeometry *g, double *y);
extern int  GEOSGeomGetZ(const GEOSGeometry *g, double *z);
extern int  GEOSGeomGetM(const GEOSGeometry *g, double *m);
extern const GEOSGeometry  *GEOSGetInteriorRingN(
    const GEOSGeometry* g,
    int n);
extern const GEOSGeometry  *GEOSGetExteriorRing(
    const GEOSGeometry* g);
extern int  GEOSGetNumCoordinates(
    const GEOSGeometry* g);
extern const GEOSCoordSequence  *GEOSGeom_getCoordSeq(
    const GEOSGeometry* g);
extern int  GEOSGeom_getDimensions(
    const GEOSGeometry* g);
extern int  GEOSGeom_getCoordinateDimension(
    const GEOSGeometry* g);
extern int  GEOSGeom_getXMin(const GEOSGeometry* g, double* value);
extern int  GEOSGeom_getYMin(const GEOSGeometry* g, double* value);
extern int  GEOSGeom_getXMax(const GEOSGeometry* g, double* value);
extern int  GEOSGeom_getYMax(const GEOSGeometry* g, double* value);
extern int  GEOSGeom_getExtent(
    const GEOSGeometry* g,
    double* xmin,
    double* ymin,
    double* xmax,
    double* ymax);
extern GEOSGeometry  *GEOSGeomGetPointN(const GEOSGeometry *g, int n);
extern GEOSGeometry  *GEOSGeomGetStartPoint(const GEOSGeometry *g);
extern GEOSGeometry  *GEOSGeomGetEndPoint(const GEOSGeometry *g);
extern char  GEOSisEmpty(const GEOSGeometry* g);
extern char  GEOSisRing(const GEOSGeometry* g);
extern char  GEOSHasZ(const GEOSGeometry* g);
extern char  GEOSHasM(const GEOSGeometry* g);
extern char  GEOSisClosed(const GEOSGeometry *g);
extern void  GEOSSetSRID(GEOSGeometry* g, int SRID);
extern void  GEOSGeom_setUserData(GEOSGeometry* g, void* userData);
extern int  GEOSNormalize(GEOSGeometry* g);
extern int  GEOSOrientPolygons(GEOSGeometry* g,
                                       int exteriorCW);