sandbox/geos/fp_geos_c.pas


function GEOSWKTWriter_create_r(handle: TGEOSContextHandle_t): PGEOSWKTWriter; cdecl; external libgeos_c;
procedure GEOSWKTWriter_destroy_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter); cdecl; external libgeos_c;
function GEOSWKTWriter_write_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter; g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
procedure GEOSWKTWriter_setTrim_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter; trim: char); cdecl; external libgeos_c;
procedure GEOSWKTWriter_setRoundingPrecision_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter; precision: longint); cdecl; external libgeos_c;
procedure GEOSWKTWriter_setOutputDimension_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter; dim: longint); cdecl; external libgeos_c;
function GEOSWKTWriter_getOutputDimension_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKTWriter_setOld3D_r(handle: TGEOSContextHandle_t; writer: PGEOSWKTWriter; useOld3D: longint); cdecl; external libgeos_c;

function GEOSWKBReader_create_r(handle: TGEOSContextHandle_t): PGEOSWKBReader; cdecl; external libgeos_c;
procedure GEOSWKBReader_destroy_r(handle: TGEOSContextHandle_t; reader: PGEOSWKBReader); cdecl; external libgeos_c;
procedure GEOSWKBReader_setFixStructure_r(handle: TGEOSContextHandle_t; reader: PGEOSWKBReader; doFix: char); cdecl; external libgeos_c;
function GEOSWKBReader_read_r(handle: TGEOSContextHandle_t; reader: PGEOSWKBReader; wkb: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSWKBReader_readHEX_r(handle: TGEOSContextHandle_t; reader: PGEOSWKBReader; hex: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSWKBWriter_create_r(handle: TGEOSContextHandle_t): PGEOSWKBWriter; cdecl; external libgeos_c;
procedure GEOSWKBWriter_destroy_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter); cdecl; external libgeos_c;
function GEOSWKBWriter_write_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter; g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSWKBWriter_writeHEX_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter; g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSWKBWriter_getOutputDimension_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setOutputDimension_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter; newDimension: longint); cdecl; external libgeos_c;
function GEOSWKBWriter_getByteOrder_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setByteOrder_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter; byteOrder: longint); cdecl; external libgeos_c;
function GEOSWKBWriter_getFlavor_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setFlavor_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter; flavor: longint); cdecl; external libgeos_c;
function GEOSWKBWriter_getIncludeSRID_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter): char; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setIncludeSRID_r(handle: TGEOSContextHandle_t; writer: PGEOSWKBWriter; writeSRID: char); cdecl; external libgeos_c;

function GEOSGeoJSONReader_create_r(handle: TGEOSContextHandle_t): PGEOSGeoJSONReader; cdecl; external libgeos_c;
procedure GEOSGeoJSONReader_destroy_r(handle: TGEOSContextHandle_t; reader: PGEOSGeoJSONReader); cdecl; external libgeos_c;
function GEOSGeoJSONReader_readGeometry_r(handle: TGEOSContextHandle_t; reader: PGEOSGeoJSONReader; geojson: pchar): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSGeoJSONWriter_create_r(handle: TGEOSContextHandle_t): PGEOSGeoJSONWriter; cdecl; external libgeos_c;
procedure GEOSGeoJSONWriter_destroy_r(handle: TGEOSContextHandle_t; writer: PGEOSGeoJSONWriter); cdecl; external libgeos_c;
function GEOSGeoJSONWriter_writeGeometry_r(handle: TGEOSContextHandle_t; writer: PGEOSGeoJSONWriter; g: PGEOSGeometry; indent: longint): pchar; cdecl; external libgeos_c;
procedure GEOSFree_r(handle: TGEOSContextHandle_t; buffer: pointer); cdecl; external libgeos_c;
function GEOSversion: pchar; cdecl; external libgeos_c;

procedure initGEOS(notice_function: TGEOSMessageHandler; error_function: TGEOSMessageHandler); cdecl; external libgeos_c;
procedure finishGEOS; cdecl; external libgeos_c;
procedure GEOSFree(buffer: pointer); cdecl; external libgeos_c;

function GEOSCoordSeq_create(size: dword; dims: dword): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSCoordSeq_copyFromBuffer(buf: Pdouble; size: dword; hasZ: longint; hasM: longint): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSCoordSeq_copyFromArrays(x: Pdouble; y: Pdouble; z: Pdouble; m: Pdouble; size: dword): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSCoordSeq_copyToBuffer(s: PGEOSCoordSequence; buf: Pdouble; hasZ: longint; hasM: longint): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_copyToArrays(s: PGEOSCoordSequence; x: Pdouble; y: Pdouble; z: Pdouble; m: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_clone(s: PGEOSCoordSequence): PGEOSCoordSequence; cdecl; external libgeos_c;
procedure GEOSCoordSeq_destroy(s: PGEOSCoordSequence); cdecl; external libgeos_c;
function GEOSCoordSeq_setX(s: PGEOSCoordSequence; idx: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setY(s: PGEOSCoordSequence; idx: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setZ(s: PGEOSCoordSequence; idx: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setXY(s: PGEOSCoordSequence; idx: dword; x: double; y: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setXYZ(s: PGEOSCoordSequence; idx: dword; x: double; y: double; z: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setOrdinate(s: PGEOSCoordSequence; idx: dword; dim: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getX(s: PGEOSCoordSequence; idx: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getY(s: PGEOSCoordSequence; idx: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getZ(s: PGEOSCoordSequence; idx: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getXY(s: PGEOSCoordSequence; idx: dword; x: Pdouble; y: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getXYZ(s: PGEOSCoordSequence; idx: dword; x: Pdouble; y: Pdouble; z: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getOrdinate(s: PGEOSCoordSequence; idx: dword; dim: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getSize(s: PGEOSCoordSequence; size: Pdword): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getDimensions(s: PGEOSCoordSequence; dims: Pdword): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_isCCW(s: PGEOSCoordSequence; is_ccw: pchar): longint; cdecl; external libgeos_c;

function GEOSGeom_createPoint(s: PGEOSCoordSequence): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createPointFromXY(x: double; y: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyPoint: PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createLinearRing(s: PGEOSCoordSequence): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createLineString(s: PGEOSCoordSequence): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyLineString: PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyPolygon: PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createPolygon(shell: PGEOSGeometry; holes: PPGEOSGeometry; nholes: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createCollection(_type: longint; geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_releaseCollection(collection: PGEOSGeometry; ngeoms: Pdword): PPGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyCollection(_type: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createRectangle(xmin: double; ymin: double; xmax: double; ymax: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_clone(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
procedure GEOSGeom_destroy(g: PGEOSGeometry); cdecl; external libgeos_c;

function GEOSGeomType(g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOSGeomTypeId(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGetSRID(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getUserData(g: PGEOSGeometry): pointer; cdecl; external libgeos_c;
function GEOSGetNumGeometries(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGetGeometryN(g: PGEOSGeometry; n: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_getPrecision(g: PGEOSGeometry): double; cdecl; external libgeos_c;
function GEOSGetNumInteriorRings(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeomGetNumPoints(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeomGetX(g: PGEOSGeometry; x: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetY(g: PGEOSGeometry; y: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetZ(g: PGEOSGeometry; z: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetM(g: PGEOSGeometry; m: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGetInteriorRingN(g: PGEOSGeometry; n: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGetExteriorRing(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGetNumCoordinates(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getCoordSeq(g: PGEOSGeometry): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSGeom_getDimensions(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getCoordinateDimension(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getXMin(g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getYMin(g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getXMax(g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getYMax(g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getExtent(g: PGEOSGeometry; xmin: Pdouble; ymin: Pdouble; xmax: Pdouble; ymax: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetPointN(g: PGEOSGeometry; n: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomGetStartPoint(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomGetEndPoint(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSisEmpty(g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisRing(g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSHasZ(g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSHasM(g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisClosed(g: PGEOSGeometry): char; cdecl; external libgeos_c;

procedure GEOSSetSRID(g: PGEOSGeometry; SRID: longint); cdecl; external libgeos_c;
procedure GEOSGeom_setUserData(g: PGEOSGeometry; userData: pointer); cdecl; external libgeos_c;
function GEOSNormalize(g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSOrientPolygons(g: PGEOSGeometry; exteriorCW: longint): longint; cdecl; external libgeos_c;
